--- a/W4D3/Projekat/main.css
+++ b/W4D3/Projekat/main.css
@@ -1,706 +1,430 @@
-/*! normalize.css v8.0.0 | MIT License | github.com/necolas/normalize.css */
-
-/* Document
-   ========================================================================== */
-
-/**
- * 1. Correct the line height in all browsers.
- * 2. Prevent adjustments of font size after orientation changes in iOS.
- */
-
-html {
-  line-height: 1.15; /* 1 */
-  -webkit-text-size-adjust: 100%; /* 2 */
+@font-face {
+  src: url(./fonts/Roboto-Black.ttf);
+  font-family: "roboto";
 }
 
-/* Sections
-   ========================================================================== */
-
-/**
- * Remove the margin in all browsers.
- */
-
-body {
-  margin: 0;
-}
-
-/**
- * Correct the font size and margin on `h1` elements within `section` and
- * `article` contexts in Chrome, Firefox, and Safari.
- */
-
-h1 {
-  font-size: 2em;
-  margin: 0.67em 0;
-}
-
-/* Grouping content
-   ========================================================================== */
-
-/**
- * 1. Add the correct box sizing in Firefox.
- * 2. Show the overflow in Edge and IE.
- */
-
-hr {
-  box-sizing: content-box; /* 1 */
-  height: 0; /* 1 */
-  overflow: visible; /* 2 */
-}
-
-/**
- * 1. Correct the inheritance and scaling of font size in all browsers.
- * 2. Correct the odd `em` font sizing in all browsers.
- */
-
-pre {
-  font-family: monospace, monospace; /* 1 */
-  font-size: 1em; /* 2 */
-}
-
-/* Text-level semantics
-   ========================================================================== */
-
-/**
- * Remove the gray background on active links in IE 10.
- */
-
-a {
-  background-color: transparent;
-}
-
-/**
- * 1. Remove the bottom border in Chrome 57-
- * 2. Add the correct text decoration in Chrome, Edge, IE, Opera, and Safari.
- */
-
-abbr[title] {
-  border-bottom: none; /* 1 */
-  text-decoration: underline; /* 2 */
-  text-decoration: underline dotted; /* 2 */
-}
-
-/**
- * Add the correct font weight in Chrome, Edge, and Safari.
- */
-
-b,
-strong {
-  font-weight: bolder;
-}
-
-/**
- * 1. Correct the inheritance and scaling of font size in all browsers.
- * 2. Correct the odd `em` font sizing in all browsers.
- */
-
-code,
-kbd,
-samp {
-  font-family: monospace, monospace; /* 1 */
-  font-size: 1em; /* 2 */
-}
-
-/**
- * Add the correct font size in all browsers.
- */
-
-small {
-  font-size: 80%;
-}
-
-/**
- * Prevent `sub` and `sup` elements from affecting the line height in
- * all browsers.
- */
-
-sub,
-sup {
-  font-size: 75%;
-  line-height: 0;
-  position: relative;
-  vertical-align: baseline;
-}
-
-sub {
-  bottom: -0.25em;
-}
-
-sup {
-  top: -0.5em;
-}
-
-/* Embedded content
-   ========================================================================== */
-
-/**
- * Remove the border on images inside links in IE 10.
- */
-
-img {
-  border-style: none;
-}
-
-/* Forms
-   ========================================================================== */
-
-/**
- * 1. Change the font styles in all browsers.
- * 2. Remove the margin in Firefox and Safari.
- */
-
-button,
-input,
-optgroup,
-select,
-textarea {
-  font-family: inherit; /* 1 */
-  font-size: 100%; /* 1 */
-  line-height: 1.15; /* 1 */
-  margin: 0; /* 2 */
-}
-
-/**
- * Show the overflow in IE.
- * 1. Show the overflow in Edge.
- */
-
-button,
-input { /* 1 */
-  overflow: visible;
-}
-
-/**
- * Remove the inheritance of text transform in Edge, Firefox, and IE.
- * 1. Remove the inheritance of text transform in Firefox.
- */
-
-button,
-select { /* 1 */
-  text-transform: none;
-}
-
-/**
- * Correct the inability to style clickable types in iOS and Safari.
- */
-
-button,
-[type="button"],
-[type="reset"],
-[type="submit"] {
-  -webkit-appearance: button;
-}
-
-/**
- * Remove the inner border and padding in Firefox.
- */
-
-button::-moz-focus-inner,
-[type="button"]::-moz-focus-inner,
-[type="reset"]::-moz-focus-inner,
-[type="submit"]::-moz-focus-inner {
-  border-style: none;
-  padding: 0;
-}
-
-/**
- * Restore the focus styles unset by the previous rule.
- */
-
-button:-moz-focusring,
-[type="button"]:-moz-focusring,
-[type="reset"]:-moz-focusring,
-[type="submit"]:-moz-focusring {
-  outline: 1px dotted ButtonText;
-}
-
-/**
- * Correct the padding in Firefox.
- */
-
-fieldset {
-  padding: 0.35em 0.75em 0.625em;
-}
-
-/**
- * 1. Correct the text wrapping in Edge and IE.
- * 2. Correct the color inheritance from `fieldset` elements in IE.
- * 3. Remove the padding so developers are not caught out when they zero out
- *    `fieldset` elements in all browsers.
- */
-
-legend {
-  box-sizing: border-box; /* 1 */
-  color: inherit; /* 2 */
-  display: table; /* 1 */
-  max-width: 100%; /* 1 */
-  padding: 0; /* 3 */
-  white-space: normal; /* 1 */
-}
-
-/**
- * Add the correct vertical alignment in Chrome, Firefox, and Opera.
- */
-
-progress {
-  vertical-align: baseline;
-}
-
-/**
- * Remove the default vertical scrollbar in IE 10+.
- */
-
-textarea {
-  overflow: auto;
-}
-
-/**
- * 1. Add the correct box sizing in IE 10.
- * 2. Remove the padding in IE 10.
- */
-
-[type="checkbox"],
-[type="radio"] {
-  box-sizing: border-box; /* 1 */
-  padding: 0; /* 2 */
-}
-
-/**
- * Correct the cursor style of increment and decrement buttons in Chrome.
- */
-
-[type="number"]::-webkit-inner-spin-button,
-[type="number"]::-webkit-outer-spin-button {
-  height: auto;
-}
-
-/**
- * 1. Correct the odd appearance in Chrome and Safari.
- * 2. Correct the outline style in Safari.
- */
-
-[type="search"] {
-  -webkit-appearance: textfield; /* 1 */
-  outline-offset: -2px; /* 2 */
-}
-
-/**
- * Remove the inner padding in Chrome and Safari on macOS.
- */
-
-[type="search"]::-webkit-search-decoration {
-  -webkit-appearance: none;
-}
-
-/**
- * 1. Correct the inability to style clickable types in iOS and Safari.
- * 2. Change font properties to `inherit` in Safari.
- */
-
-::-webkit-file-upload-button {
-  -webkit-appearance: button; /* 1 */
-  font: inherit; /* 2 */
-}
-
-/* Interactive
-   ========================================================================== */
-
-/*
- * Add the correct display in Edge, IE 10+, and Firefox.
- */
-
-details {
-  display: block;
-}
-
-/*
- * Add the correct display in all browsers.
- */
-
-summary {
-  display: list-item;
-}
-
-/* Misc
-   ========================================================================== */
-
-/**
- * Add the correct display in IE 10+.
- */
-
-template {
-  display: none;
-}
-
-/**
- * Add the correct display in IE 10.
- */
-
-[hidden] {
-  display: none;
-}
 * {
-    margin:0;
-    padding:0;
-    box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
 }
 
 .clearfix:after {
-    content:"";
-    clear:both;
-    display:block;
+  content: "";
+  clear: both;
+  display: block;
 }
 
-@font-face {
-    src:url(./fonts/Roboto-Black.ttf);
-    font-family:"roboto";
+body {
+  font-family: "roboto", sans-serif;
+  font-size: 1em;
 }
+
 nav {
-    text-align:center;
-    width:90%;
-    margin:0 auto;
-    margin-bottom:20px;
-   
+  text-align: center;
+  width: 90%;
+  margin: 0 auto;
+  margin-bottom: 20px;
 }
+
+nav ul {
+  background-color: rgb(89, 185, 218);
+}
+
 nav ul li {
-    background-color:rgb(89, 185, 218);
-    list-style:none;
-    padding-top:10px;
-    padding-bottom:10px;
-    color:white;
-    opacity:0.9;
-    font-weight:700;
+  list-style: none;
+  padding-top: 10px;
+  padding-bottom: 10px;
+  color: white;
+  opacity: 0.9;
+  font-weight: 700;
 }
-nav h1 span{
-    display:inline-block;
-    color:orange;
-    border-top:4px solid #999;
-    border-bottom:4px solid #999;
-    border-left:4px solid #999;
-    margin-right:5px;
+
+nav h1 span {
+  display: inline-block;
+  color: orange;
+  border-top: 4px solid #999;
+  border-bottom: 4px solid #999;
+  border-left: 4px solid #999;
+  margin-right: 5px;
 }
+
 nav h1 {
-    color:#999;
+  color: #999;
+}
+/* /////////////NAV///////////////////////// */
+@media (min-width: 567px)  {
+    nav {
+        margin: 0;
+        width: 100%;
+    }
+
+    nav h1 {
+        color: white;
+        float: left;
+        margin-left:20px;
+    }
+
+    nav h1 span {
+        border-color: white;
+    }
+    
+    nav ul {
+        float: right;
+        background-color: transparent;
+        margin-top:25px;
+        margin-right:20px;
+    }
+
+    nav ul li {
+        float: left;
+        margin-right: 10px;
+    }
+}
+
+@media (min-width:768px)  {
     
 }
-header{
-    background-image: url("images/banner3.jpg");
-    background-repeat:no-repeat;
-    width:100%;
-    height:200px;
-    background-size:cover;
-    padding-top:20%;
+
+/* Header */
+header {
+  background-image: url("images/banner3.jpg");
+  background-repeat: no-repeat;
+  background-size: cover;
+  padding-top: 20%;
+  padding-bottom: 20%;
 }
 img {
-    width:100%;
+  width: 100%;
 }
 header h2 {
-    font-size:18px;
-    color:white;
-    text-align:center;
+  font-size: 1em;
+  color: white;
+  text-align: center;
 }
 .buttonFirst {
-margin:0 auto;
-display:block;
-background-color: blue;
-border-radius:15px;
-padding:3px 10px;
-border-color:blue;
-margin-top:3%;
-font-family:"roboto";
-font-size:16px;
-    font-weight:500;
+  margin: 0 auto;
+  display: block;
+  background-color: blue;
+  border-radius: 15px;
+  padding: 3px 10px;
+  border-color: blue;
+  margin-top: 3%;
+  font-family: "roboto";
+  font-size: 0.8em;
+  font-weight: 500;
 }
 .buttonFirst a {
-    text-decoration:none;
-    color:white;
-    background-color:blue;
-    font-size:16px;
-    font-weight:100;
+  text-decoration: none;
+  color: white;
+  background-color: blue;
+  font-weight: 100;
 }
+
+@media (min-width: 768px) {
+    header {
+        padding-top: 25%;
+        font-size: 1.8em;
+    }
+}
+@media (min-width:1200px){
+    header {
+        padding-top: 30%;
+      }
+      
+      header h2 {
+        font-size: 1.7em;
+        opacity: 0.8;
+        font-weight:200;
+        padding: 0 20px;
+      }
+      .buttonFirst {
+        
+        padding: 10px 15px;
+        border-color: rgb(112, 191, 223);
+        background-color:rgb(112, 191, 223);
+        margin-top: 3%;
+        font-family: "roboto";
+        font-size: 1em;
+        font-weight: 500;
+      }
+      .buttonFirst a {
+        text-decoration: none;
+        color: white;
+        background-color: rgb(112, 191, 223);
+        font-size: 0.6em;
+        font-weight: 100;
+      }
+}
+
+/* Main */
 main {
-    width:100%;
-    display:inline-block;
-    padding-top:5%;
-    
+  width: 100%;
+  display: inline-block;
+  padding-top: 5%;
 }
 main h3 {
-    border-bottom:2px solid black;
-    margin-bottom:3%;
-    display:inline-block;
-}
-section {
-width:90%;
-margin:0 auto;
-text-align: center;
-}
-section h4 {
-    margin-bottom:5%;
-    color:lightskyblue;
-}
-section p {
-    display:inline-block;
-    margin-bottom: 3%;
+  border-bottom: 2px solid black;
+  margin-bottom: 3%;
+  
+  
 }
 article {
     text-align: left;
-    margin:0 auto;
-    width:80%;
-    padding-left:3%;
-}
-article ul li {
-    list-style-image:url("images/arrow_bullet.png");
-    
-    margin-bottom:4%;
+    margin: 0 auto;
+    width: 80%;
+    padding-left: 3%;
+  }
+  article ul li {
+    list-style-image: url("images/arrow_bullet.png");
+  
+    margin-bottom: 4%;
+  }
+
+  .sectionImg1 {
+    width: 90%;
+    margin: 0 auto;
+    display: block;
+    margin-bottom: 5%;
+  }
+  section h4 {
+    margin-bottom: 5%;
+    color: lightskyblue;
+  }
+  section p {
+    display: inline-block;
+    margin-bottom: 3%;
+  }
+
+  section {
+    width: 90%;
+    margin: 0 auto;
+    text-align: center;
+  }
+  
+  
+  
+  .whatPeople {
+    width: 100%;
+    margin-top: 10%;
+    clear:both;
+  }
+  .bottomArticle {
+    background-color: rgb(103, 156, 216);
+    margin-bottom: 5%;
+    text-align: left;
+    padding-top: 5%;
+    padding-bottom: 5%;
+  }
+  .bottomImg {
+    display: block;
+    border-radius: 50%;
+    width: 20%;
+    float: left;
+    border: 2px solid white;
+  }
+  .bottomArticle h5 {
+    display: inline-block;
+    float: left;
+    margin-top: 5%;
+  }
+  .bottomArticle p {
+    color: white;
+  }
+  .firstArticleBottom {
+    margin-top: 5%;
+  }
+  .bottomSection2 {
+    height: 200px;
+  }
+  .greenDiv {
+    float: left;
+    width: 50%;
+    background-color: rgb(69, 148, 69);
+    color: white;
+  }
+  .redDiv {
+    float: left;
+    width: 50%;
+    background-color: rgb(206, 89, 89);
+    color: white;
+  }
+  .blueDiv {
+    float: left;
+    width: 50%;
+    background-color: blue;
+    color: white;
+  }
+  .houseDiv {
+    float: left;
+    width: 50%;
+    background-color: aqua;
+  }
+  
+  .ourMap {
+    width: 100%;
+    height: 80%;
+  }
+  
+
+@media (min-width: 567px){
+    main h3{
+        font-size: 1.6em;
+        font-weight: 300;
+        clear:both;
+    }
+    article {
+ 
+  float:left;
+  width: 50%;
+  padding-left: 3%;
 }
 .sectionImg1 {
-    width:90%;
-    margin:0 auto;
-    display:block;
-    margin-bottom:5%;
-}
-.whatPeople {
+    width: 50%;
+    float:left;
+  }
+
+  .clearBoth{
+      clear:both;
+      width:90%;
+  }
+  section h4 {
+    margin-bottom: 5%;
+    color: lightskyblue;
+  }
+  section p {
+    /* display: inline-block; */
+    margin-bottom: 3%;
+  }
+
+  section {
+    width: 90%;
+    margin: 0 auto;
+    text-align: center;
+  }
+  
+  
+  
+  .whatPeople {
+    width: 100%;
+    margin-top: 10%;
+    clear:both;
+  }
+  .bottomArticle {
+      width:45%;
+    margin:0 10px;
+    padding-top: 5%;
+    padding-bottom: 5%;
+    float:left;
+  }
+  .bottomImg {
+    display: block;
+    border-radius: 50%;
+    width: 20%;
+    float: left;
+    border: 2px solid white;
+  }
+  .bottomArticle h5 {
+    display: inline-block;
+    float: left;
+    margin-top: 5%;
+  }
+  .bottomArticle p {
+    color: white;
+  }
+  .firstArticleBottom {
+    margin-bottom:0;
+  }
+  .selenaGomez {
+      margin-top:10px;
+  }
+  .bottomSection2 {
     width:100%;
-    margin-top:10%;
-}
-.bottomArticle {
-background-color:rgb(103, 156, 216);
-margin-bottom:5%;
-text-align: left;
-padding-top:5%;
-padding-bottom:5%;
-}
-.bottomImg {
-    display:block;
-    border-radius:50%;
-    width:20%;
-    float:left;
-    border:2px solid white;
-}
-.bottomArticle h5 {
-    display:inline-block;
-    float:left;
-    margin-top:5%;
-}
-.bottomArticle p {
-    color:white;
-}
-.firstArticleBottom {
-    margin-top:5%;
-}
-.bottomSection2 {
-    height:200px;
-} 
-.greenDiv {
-    float:left;
-    width:50%;
-    background-color: rgb(69, 148, 69);
-    color:white;
-}
-.redDiv {
-    float:left;
-    width:50%;
-    background-color: rgb(206, 89, 89);
-    color:white;
-}
-.blueDiv {
-    float:left;
-    width:50%;
+    clear:both;
+  }
+  .greenDiv {
+    width:335px;
+    padding-top:150px;
+    padding-bottom:149px;
+  }
+
+  .redDiv {
+    float: right;
+    color: white;
+    padding:22.9% 0;
+    width:335px;
+  }
+  .redDiv img {
+      width:5%;
+  }
+  .blueDiv {
+    float: left;
+    width:335px;
     background-color: blue;
-    color:white;
-}
-.houseDiv {
-    float:left;
-    width:50%;
+    color: white;
+    padding:20.9% 0;
+  }
+  .houseDiv {
+    float: left;
+    width:335px;
     background-color: aqua;
-}
+  }
+  
+  .ourMap {
+    width: 100%;
+    height: 80%;
+  }
 
 
-
-
-
-
-
-.ourMap {
-    width:100%;
-    height:80%;
 }
 
 
 /*****************TABLET***************/
 
-@media(min-width:567px) {
-
-nav {
-    text-align:center;
-    width:90%;
-    margin:0 auto;
-    margin-bottom:20px;
-    /* position: absolute;
-    top:5%;
-    right:3%; */
-
-   
+@media (min-width: 768px) {
 }
-nav ul { 
-        position: absolute; 
-        top:2%;
-        right:3%; 
-        z-index: 10;
-}
-nav ul li {
-    background-color: transparent;
-    list-style:none;
-    display:inline-block;
-    padding:2px 10px;
-    color:white;
-    font-weight:700;  
-}
-nav h1 span{
-    display:inline-block;
-    color:orange;
-    border-top:4px solid #999;
-    border-bottom:4px solid #999;
-    border-left:4px solid #999;
-    margin-right:5px;
-}
-nav h1 {
-    color:#999;
-    float:left;
-    position: absolute;
-    top:1%;
-    left:3%;
-    z-index: 10;
-    
-}
-header{
-    position:relative;
-    bottom:110px;
-    background-image: url("images/banner3.jpg");
-    background-repeat:no-repeat;
-    width:100%;
-    height:500px;
-    background-size:cover;
-    padding-top:20%;
-}
-img {
-    width:100%;
-}
-header h2 {
-    font-size:1.8em;
-    color:white;
-    text-align:center;
-    padding-top:20%;
-}
-.buttonFirst {
-margin:0 auto;
-display:block;
-background-color: rgb(112, 191, 223);
-border-radius:25px;
-padding:15px 25px;
-border-color:rgb(112, 191, 223);
-margin-top:3%;
-font-family:"roboto";
-font-size:16px;
-    font-weight:500;
-}
-.buttonFirst a {
-    text-decoration:none;
-    color:white;
-    background-color:rgb(112, 191, 223);
-    font-size:16px;
-    font-weight:100;
-}
-
-    
-}
-
-
-
-
+  
 
 /*****************DESKTOP***************/
 
-@media(min-width:1200px) {
-
-    nav {
-        text-align:center;
-        width:90%;
-        margin:0 auto;
-        margin-bottom:20px; 
-    }
-    nav ul { 
-            position: absolute; 
-            top:2%;
-            right:3%; 
-            z-index: 10;
-    }
-    nav ul li {
-        list-style:none;
-        display:inline-block;
-        padding:2px 10px;
-        color:white;
-        font-weight:700;
-        background-color: transparent;
-    }
-    nav h1 span{
-        display:inline-block;
-        color:orange;
-        border-top:4px solid #999;
-        border-bottom:4px solid #999;
-        border-left:4px solid #999;
-        margin-right:5px;
-    }
-    nav h1 {
-        color:#999;
-        float:left;
-        position: absolute;
-        top:1%;
-        left:3%;
-        z-index: 10;
-        
-    }
-    header{
-        position:relative;
-        bottom:110px;
-        background-image: url("images/banner3.jpg");
-        background-repeat:no-repeat;
-        width:100%;
-        height:900px;
-        background-size:cover;
-        padding-top:20%;
-    }
-    img {
-        width:100%;
-    }
-    header h2 {
-        font-size:4.4em;
-        color:white;
-        text-align:center;
-        padding-top:6%;
-        opacity: 0.8;
-        font-weight: 300;
-    }
-    .buttonFirst {
-    margin:0 auto;
-    display:block;
-    background-color: rgb(112, 191, 223);
-    border-radius:25px;
-    padding:15px 25px;
-    border-color:rgb(112, 191, 223);
-    margin-top:3%;
-    font-family:"roboto";
-    font-size:16px;
-        font-weight:500;
-    }
-    .buttonFirst a {
-        text-decoration:none;
-        color:white;
-        background-color:rgb(112, 191, 223);
-        font-size:16px;
-        font-weight:100;
-    }
-    
-        
-    }
-    
+@media (min-width: 1200px) {
+  nav {
+    text-align: center;
+    width: 90%;
+    margin: 0 auto;
+    margin-bottom: 20px;
+  }
+  nav ul {
+    position: absolute;
+    top: 2%;
+    right: 3%;
+    z-index: 10;
+  }
+  nav ul li {
+    list-style: none;
+    display: inline-block;
+    padding: 2px 10px;
+    color: white;
+    font-weight: 700;
+    background-color: transparent;
+  }
+  nav h1 span {
+    display: inline-block;
+    color: orange;
+    border-top: 4px solid #999;
+    border-bottom: 4px solid #999;
+    border-left: 4px solid #999;
+    margin-right: 5px;
+  }
+  nav h1 {
+    color: #999;
+    float: left;
+    position: absolute;
+    top: 1%;
+    left: 3%;
+    z-index: 10;
+  }
+  
+  
+ 
+}
